--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>JavaOOPBasics</artifactId>
-    <version>ClassesandObjects</version>
+    <version>EmployeeClass</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
